--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "flutter-i18n-helper",
+  "type": "module",
   "displayName": "flutter-i18n-helper",
   "description": "",
   "version": "0.0.1",
@@ -14,12 +15,6 @@
   ],
   "main": "./out/extension.js",
   "contributes": {
-    "commands": [
-      {
-        "command": "flutterI18n.scanStrings",
-        "title": "Flutter I18n: Scan Strings"
-      }
-    ],
     "languages": [
       {
         "id": "dart",
@@ -33,7 +28,21 @@
     ],
     "files.associations": {
       "*.dart": "dart"
-    }
+    },
+    "commands": [
+      {
+        "command": "flutterI18nHelper.initTranslations",
+        "title": "Flutter I18n Helper: Init Translations"
+      },
+      {
+        "command": "flutterI18nHelper.uploadLocalTranslations",
+        "title": "Flutter I18n Helper: Upload Local Translations"
+      },
+      {
+        "command": "flutterI18nHelper.fetchCloudTranslations",
+        "title": "Flutter I18n Helper: Fetch Cloud Translations"
+      }
+    ]
   },
   "scripts": {
     "vscode:prepublish": "npm run compile",
@@ -43,15 +52,25 @@
     "lint": "eslint src",
     "test": "vscode-test"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/your-username/flutter-i18n-helper.git"
+  },
   "devDependencies": {
-    "@types/vscode": "^1.99.0",
     "@types/mocha": "^10.0.10",
     "@types/node": "20.x",
+    "@types/vscode": "^1.99.0",
     "@typescript-eslint/eslint-plugin": "^8.28.0",
     "@typescript-eslint/parser": "^8.28.0",
-    "eslint": "^9.23.0",
-    "typescript": "^5.8.2",
     "@vscode/test-cli": "^0.0.10",
-    "@vscode/test-electron": "^2.4.1"
+    "@vscode/test-electron": "^2.4.1",
+    "eslint": "^9.23.0",
+    "typescript": "^5.8.2"
+  },
+  "dependencies": {
+    "@vitalets/google-translate-api": "^9.2.1",
+    "axios": "^1.9.0",
+    "google-auth-library": "^9.15.1",
+    "google-spreadsheet": "^4.1.4"
   }
 }
